@@ -1,3 +1,7 @@
+2007-08-14  Guillem Jover  <guillem@debian.org>
+
+	* src/archives.c (linktosameexistingdir): Mark strings for translation.
+
 2007-08-11  Ian Jackson  <iwj@ubuntu.com>
 
 	* src/archives.c (linktosameexistingdir): New function.
